2003-03-06  Gary Thomas  <gary@mlbassoc.com>

	* src/if_quicc.c (quicc_eth_init): New name for CPM/DPRAM allocator.

2002-11-25  Gary Thomas  <gthomas@ecoscentric.com>

	* src/quicc_eth.h: 
	* src/if_quicc.c: Split platform specifics into separate packages.

2002-08-08  Gary Thomas  <gthomas@ecoscentric.com>
2002-08-08  Luoqi Chen <lchen@onetta.com>

	* src/if_quicc.c (quicc_eth_send): Need to flush cache to force
	out data, not invalidate it.

2002-06-14  Gary Thomas  <gary@chez-thomas.org>

	* src/if_quicc.c: 
	Need to include <pkgconf/io_eth_drivers.h> for proper configuration
	of stand-alone (polled) vs. system (interrupt driven) mode.

2002-05-30  Jonathan Larmour  <jlarmour@redhat.com>

	* src/if_quicc.c: Use CYGINT_IO_ETH_INT_SUPPORT_REQUIRED where
	appropriate.

2001-08-22  Gary Thomas  <gthomas@redhat.com>

	* src/if_quicc.c: 
	printf() is no longer a part of RedBoot.  Thus all programs
	must use diag_printf() and related functions instead.

2001-05-07  Gary Thomas  <gthomas@redhat.com>

	* src/if_quicc.c (quicc_eth_init): Get ESA from RedBoot 'fconfig' data.
	Improve interrupt interroperability when running with RedBoot and
	sharing the network connection.  Proper operation requires a new
	RedBoot at least as new as this file.

2001-01-30  Gary Thomas  <gthomas@redhat.com>

	* src/if_quicc.c: New RedBoot config data layout.

2001-01-03  Gary Thomas  <gthomas@redhat.com>

	* src/if_quicc.c: Add support in RedBoot to keep ESA (since
	the I2C interface is really broken).

2000-10-20  Gary Thomas  <gthomas@redhat.com>

	* src/if_quicc.c: Changes to compile in stand-alone mode.

2000-09-01  Hugo Tyson  <hmt@cygnus.co.uk>

	* src/if_quicc.c (quicc_eth_init): Work with new fast net
	thread to do all the copying work instead of loading up DSR time.
	In detail:
	 o New "deliver" function in the interface record.
	 o The DSR changed to be that new function; its arg is now the sc
	   pointer already, no cast needed.